--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,117 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Mosk';
+  src: url('/assets/Mosk-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Mosk';
+  src: url('/assets/Mosk-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* Full page and Font-family CSS */
+html, body, #root, #root>div {
+  height: 100% !important;
+  font-family: 'Roboto';
+  padding: 0 20px;
+  background-color: #fafafa;
+}
+
+.homeContainer {
+  height: 100%;
+}
+
+.flexiflex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.createButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fab {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+}
+
+.fakeNewsCard {
+  margin: 20px 0;
+  display: flex;
+}
+
+.fakeNewsCardContent {
+  flex: 3;
+}
+
+.fakeNewsCardMedia {
+  flex: 1;
+}
+
+.fakeNewsCounters {
+  display: flex;
+  justify-content: space-between;
+}
+
+.fakeNewsCounters > p {
+  padding: 5px;
+  margin: 20px 10px;
+}
+
+.cardImage {
+  height: 170px;
+}
+
+.h1Fake {
+  font-family: 'Mosk';
+  font-weight: bold;
+  color: red;
+  font-size: 100px;    
+}
+
+.h1News {
+  font-family: 'Mosk';
+  font-weight: bold;
+  font-size: 100px;
+}
+
+.h1Generator {
+  font-family: 'Mosk';
+  font-weight: normal;
+  font-size: 25px;
+}
+
+.sortSelector {
+  display: flex;
+}
+
+.selector {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 500px) {
+  html, body, #root, #root>div {
+    padding: 0 5px;
+  }
+  .createButton {
+    display: none;
+  }
+  .h1Fake {
+    font-size: 45px;
+  }
+  
+  .h1News {
+    font-size: 45px;
+  }
+  
+  .h1Generator {
+    font-size: 20px;
+  }
 }
