--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,11 @@ html, body, #root, #root>div {
   background-color: #f9f9f9;
 }
 
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 .homeContainer {
   height: 100%;
 }
@@ -94,6 +99,42 @@ html, body, #root, #root>div {
 
 .selector {
   margin-left: auto;
+}
+
+.tag {
+  display: inline-block;
+  padding: 5px 5px;
+}
+
+.imagesList {
+  display: 'flex';
+  flex-wrap: 'wrap';
+  justify-content: 'space-around';
+  overflow: 'hidden';
+}
+
+.gridImage {
+  position: relative;
+}
+
+.gridImage:after {
+  content: '\A';
+  position: absolute;
+  width: 100%; height:100%;
+  top:0; left:0;
+  background:rgba(0, 0, 0, 0.25);
+  opacity: 0;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+}
+
+.gridImage:hover:after { 
+  opacity: 1;
+}
+
+.gridImages {
+  flex-wrap: 'nowrap';
+  transform: 'translateZ(0)';
 }
 
 @media screen and (max-width: 500px) {
